Fix rows on safari

--- a/plugin/YouPHPFlix2/view/css/style.css
+++ b/plugin/YouPHPFlix2/view/css/style.css
@@ -396,7 +396,3 @@ body.fullscreen{
     background: transparent;
     border-color: transparent;
 }
-
-.categoriesContainerItem{
-    display: inline-block;
-}
